[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tabuleiro.png" type="Texture" id=2]
[ext_resource path="res://Assets/bola.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/x.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/Darth Vader Breathing.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scripts/VaderBreathing.gd" type="Script" id=6]
[ext_resource path="res://Assets/RedSaberSound.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/BlueSaberSound.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scripts/OWinSound.gd" type="Script" id=9]
[ext_resource path="res://Scripts/XWinSound.gd" type="Script" id=10]
[ext_resource path="res://Assets/x_easy.png" type="Texture" id=11]
[ext_resource path="res://Assets/x_medium.png" type="Texture" id=12]
[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Assets/BlasterSound.mp3" type="AudioStream" id=14]
[ext_resource path="res://Assets/hard_win.mp3" type="AudioStream" id=15]
[ext_resource path="res://Assets/medium_win.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/easy_win.mp3" type="AudioStream" id=17]
[ext_resource path="res://Assets/player_win.mp3" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "O",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Vazio",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "X",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "X_E",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "X_M",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 26
outline_color = Color( 0.65098, 0.407843, 0.0470588, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=12]
size = 26
font_data = ExtResource( 13 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Tabuleiro" type="Sprite" parent="."]
position = Vector2( 717.751, 583 )
scale = Vector2( 2.70307, 1.95211 )
texture = ExtResource( 2 )

[node name="AS0x0" type="AnimatedSprite" parent="."]
position = Vector2( 496.58, 414.5 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS0x1" type="AnimatedSprite" parent="."]
position = Vector2( 716.751, 414 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS0x2" type="AnimatedSprite" parent="."]
position = Vector2( 940.751, 415 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS1x0" type="AnimatedSprite" parent="."]
position = Vector2( 483.751, 583 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS1x1" type="AnimatedSprite" parent="."]
position = Vector2( 698.751, 582 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS1x2" type="AnimatedSprite" parent="."]
position = Vector2( 941.751, 588 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS2x0" type="AnimatedSprite" parent="."]
position = Vector2( 488.751, 739 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS2x1" type="AnimatedSprite" parent="."]
position = Vector2( 708.751, 742 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="AS2x2" type="AnimatedSprite" parent="."]
position = Vector2( 942.751, 742 )
scale = Vector2( 0.449304, 0.601191 )
frames = SubResource( 1 )
animation = "X_E"

[node name="Estado" type="Label" parent="."]
margin_left = 601.0
margin_top = 266.0
margin_right = 682.0
margin_bottom = 299.0
size_flags_stretch_ratio = 0.82
custom_colors/font_color = Color( 1, 0.913725, 0.0980392, 1 )
custom_fonts/font = SubResource( 11 )
text = "Game"
align = 1
valign = 1

[node name="Maquina" type="Timer" parent="."]
one_shot = true

[node name="FimDeJogo" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="VaderBreathing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -9.567
script = ExtResource( 6 )

[node name="Stop" type="Timer" parent="VaderBreathing"]
wait_time = 4.0

[node name="OWinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 4.504
script = ExtResource( 9 )

[node name="Stop" type="Timer" parent="OWinSound"]
wait_time = 2.0
one_shot = true

[node name="XWinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0
script = ExtResource( 10 )

[node name="Stop" type="Timer" parent="XWinSound"]
wait_time = 2.0
one_shot = true

[node name="BlasterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = 6.992

[node name="Hard_Win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 24.0

[node name="Medium_Win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = 24.0

[node name="Easy_Win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = 15.135

[node name="Player_Win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = 24.0

[node name="Turno" type="Label" parent="."]
margin_left = 1096.0
margin_top = 558.0
margin_right = 1211.0
margin_bottom = 591.0
custom_colors/font_color = Color( 1, 0.913725, 0.0980392, 1 )
custom_fonts/font = SubResource( 12 )
text = "Turno: 1"
align = 1
valign = 1

[connection signal="timeout" from="Maquina" to="." method="_on_Maquina_timeout"]
[connection signal="timeout" from="FimDeJogo" to="." method="_on_FimDeJogo_timeout"]
[connection signal="timeout" from="VaderBreathing/Stop" to="VaderBreathing" method="_on_Stop_timeout"]
[connection signal="timeout" from="OWinSound/Stop" to="OWinSound" method="_on_Stop_timeout"]
[connection signal="timeout" from="XWinSound/Stop" to="XWinSound" method="_on_Stop_timeout"]
